# umsg

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  async_test.cpp  producer_consumer.cpp  tcp_comms.cpp  vanilla_queue.cpp
include/: discard_message.h  locked_message_queue.h  message_queue.h  tcp_stream.h
src/: tcp_stream.cpp
